--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #dialect
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# App Properties
+app.jwtSecret=123esef
+app.jwtExpirationMs=86400000
